Almost finished with week 1 homework

--- a/docs/dendron.yml
+++ b/docs/dendron.yml
@@ -72,6 +72,7 @@ workspace:
     maxPreviewsCached: 10
     maxNoteLength: 204800
     enableFullHierarchyNoteTitle: false
+    enableSmartRefs: false
 preview:
     enableFMTitle: true
     enableNoteTitleForLink: true
