--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -36,6 +36,26 @@
 				"${fileDirname}\\${fileBasenameNoExtension}.tex"
 			],
 			"group": "build"
+		},
+		{
+			"type": "cppbuild",
+			"label": "C/C++ Mac Clang build active file",
+			"command": "/usr/bin/clang++",
+			"args": [
+				"-fdiagnostics-color=always",
+				"-g",
+				"${file}",
+				"-o",
+				"${fileDirname}/${fileBasenameNoExtension}"
+			],
+			"options": {
+				"cwd": "${fileDirname}"
+			},
+			"problemMatcher": [
+				"$gcc"
+			],
+			"group": "build",
+			"detail": "compiler: /usr/bin/clang"
 		}
 	]
 }
